# kleinanzeigen-monitor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.py  config.toml  config.toml.example  evaluator.py  fetcher.py  main.py  monitor  monitor.py  notifier.py  persistence.py  pyproject.toml  setup.py  setup.sh
.github/workflows/: build.yaml
src/: config.py  evaluator.py  fetcher.py  notifier.py  persistence.py  telemetry.py
src/models/: app_config.py  evaluationResult.py  listing.py  listingDetail.py
tests/: test_config.py  test_evaluator.py  test_fetcher.py  test_monitor_e2e.py  test_search_commands.py
