[project]
name = "kleinanzeigen-monitor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
    "lxml>=6.0.2",
    "opentelemetry-api>=1.29",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-exporter-otlp-proto-http>=1.29",
    "opentelemetry-instrumentation-requests>=0.50b0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
